--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ body {
     height: 100vh;
     width: 100vw;
     overflow: hidden;
+
+    display: flex;
+    flex-direction: row;
 }
 
 .image {
@@ -21,7 +24,7 @@ body {
     position: relative;
 }
 
-.image > img {
+.image>img {
     height: 100%;
     width: 100%;
 }
@@ -40,12 +43,12 @@ body {
     gap: 10px;
 }
 
-.odin-logo > img {
+.odin-logo>img {
     height: 75%;
     width: auto;
 }
 
-.odin-logo > span {
+.odin-logo>span {
     color: white;
     display: inline-block;
     vertical-align: middle;
@@ -66,6 +69,102 @@ body {
     align-items: center;
 }
 
-.credits > span, a {
+.credits>span,
+a {
     color: white;
+}
+
+.signup {
+    height: 100%;
+    width: 70%;
+}
+
+.intro {
+    height: auto;
+    width: 100%;
+    margin-top: 5%;
+    margin-left: 4%;
+}
+
+p {
+    height: 50%;
+    width: 65%;
+
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 550;
+}
+
+.formdiv {
+    margin-top: 30px;
+    height: 40%;
+    width: 100%;
+    padding-left: 4%;
+}
+
+form {
+    height: 100%;
+    width: 100%;
+}
+
+form > p {
+    height: 10%;
+    width: auto;
+    font-size: 35px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.fields {
+    height: 70%;
+    width: 60%;
+    margin-top: 20px;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+label, input {
+    display: block;
+    width: 100%;
+}
+
+label {
+    text-transform: uppercase;
+    font-weight: 550;
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+
+input {
+    height: 40%;
+}
+
+.field {
+    height: 30%;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 80px;
+}
+
+button {
+    height: 50px;
+    width: 150px;
+    background-color: #596D48;
+    color: white;
+    font-size: 15px;
+    border-radius: 5px;
+    margin-top: 30px;
+}
+
+.alr {
+    font-size: 20px;
+    margin-left: 4%;
+    margin-top: 60px;
+}
+
+#password:invalid {
+    border: 1px solid red;
 }
